--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </header>
 
     <main>
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-interval="800">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./layer.png" class="d-block w-100" alt="...">
