--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;₹ 599</span>
         </div>
 
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-interval="800">
+                <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://www.layers.shop/cdn/shop/files/NEW_ARRIVALS-2-min.png" class="d-block w-100" alt="...">
+                    <img src="https://www.layers.shop/cdn/shop/files/NEW_ARRIVALS-2-min.png?v=1708333649&width=1860"
+                        class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.layers.shop/cdn/shop/files/Marvel_24_Banner1.jpg" class="d-block w-100" alt="...">
+                    <img src="https://www.layers.shop/cdn/shop/files/Marvel_24_Banner1.jpg?v=1705318216&width=1860"
+                        class="d-block w-100" alt="...">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
